# sfml_playground

./: CMakeLists.txt
include/: circle.h  shape.h  vector.h  window.h
src/: circle.cpp  main.cpp  shape.cpp  vector.cpp  window.cpp
